# usd_asset_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_run.py  build_usd_linux.sh  generate_default.py  imgui.ini  loader.py  requirements.txt  simple.usdc
.backup/: usd_core.py
core/: base_core.py  c_base.pyi  c_draw_opengl.pyi  config.toml  entity_core.py  render_core.py  static_core.py  usd_core.py  utils_core.py
core/asset/icon/: icon_camera.psd
core/asset/usd/: example_cube.usdc  example_dark.usdc  example_sphere.usdc
core/assets/usd/: example_scene.usdc
core/outliner/: outliner_core.py
core/static/: config_core.toml  static_core.py
helpers/: build_run.py  windows_build_run.ps1
src/: c_base.cpp  c_draw.cpp  c_draw_opengl.cpp  c_draw_utils.cpp  c_hydra.cpp  c_opengl_draw.cpp  c_opengl_modern.cpp  c_static.cpp  c_utils.cpp  shader_bones.fs  shader_bones.vs  shader_generic.fs  shader_generic.vs  usd_pybind_cast.h
static/: static.py
stubs/pxr/: __init__.py
stubs/pxr/Gf/: __init__.pyi
stubs/pxr/Usd/: __init__.pyi
stubs/pxr/Vt/: __init__.pyi
tool/: base_tool.py  loader_tool.py  main.py  usd_outliner.py
tool/outliner/: base_outliner.py  loader_outliner.py
tool/panel/: config_panel.toml  detail_panel.py  outliner_panel.py  trackbar_panel.py  viewport_panel.py
utils/: utils.py
